单列表实现折叠

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,7 @@
         </activity>
 
         <activity android:name=".SecondActivity"></activity>
+        <activity android:name=".ThreeActivity"></activity>
         <service android:name="ziye.service.MessageService">
 
             <intent-filter>
